# ospsd-team-10

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  contributing.md  design.md  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  sitemap.xml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
DESIGN/: index.html
api/vertical_api/: index.html
api/vertical_impl/: index.html
cloud_client_api/: client.py
component/: index.html
components/cloud_storage_adapter/: README.md  pyproject.toml
components/cloud_storage_adapter/src/cloud_storage_adapter/: __init__.py  adapter.py
components/cloud_storage_client_api/src/cloud_storage_client_api/: __init__.py  client.py
components/cloud_storage_client_api/tests/: __init__.py  test_interface.py
components/cloud_storage_service/: README.md  pyproject.toml
components/cloud_storage_service/src/cloud_storage_service/: __main__.py  app.py  deps.py
components/cloud_storage_service/src/cloud_storage_service/routes/: auth.py  storage.py
components/cloud_storage_service/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_health.py  test_storage.py
components/cloud_storage_service_api_client/: README.md  pyproject.toml
components/cloud_storage_service_api_client/cloud_storage_service_api_client/api/storage/: list_objects_storage_container_name_objects_get.py  upload_object_storage_container_name_objects_object_key_post.py
components/cloud_storage_service_api_client/src/cloud_storage_service_api_client/: __init__.py  client.py  storage.py
components/cloud_storage_service_api_client/tests/: test_storage_client.py
components/s3_client_impl/: README.md  pyproject.toml
components/s3_client_impl/tests/: __init__.py  test_aws_impl.py  test_oauth_http.py
contributing/: index.html
docs/: DESIGN.md  component.md  contributing.md  index.md
docs/api/: cloud_storage_client_api.md  s3_client_impl.md  vertical_api.md  vertical_impl.md
src/ai_client_api/: pyproject.toml
src/ai_client_api/src/ai_client_api/: __init__.py  client.py
src/chat_client_api/: pyproject.toml
src/chat_client_service_api_client/: pyproject.toml
src/chat_client_service_api_client/src/chat_client_service_api_client/: __init__.py
src/chat_client_service_api_client/src/chat_client_service_api_client/api/default/: auth_callback_auth_callback_get.py  auth_login_auth_login_get.py  create_auth_session_auth_sessions_post.py  delete_auth_session_auth_sessions_session_id_delete.py  get_auth_session_auth_sessions_session_id_get.py  get_messages_messages_get.py  health_health_get.py  list_channels_channels_get.py  send_message_messages_post.py
src/chat_client_service_api_client/src/chat_client_service_api_client/models/: __init__.py  auth_callback_response.py  auth_session_response.py  auth_session_status_response.py  channel_model.py  get_messages_response.py  health_response.py  list_channels_response.py  logout_response.py  message_model.py  send_message_request.py  send_message_response_model.py
src/cloud_storage_client_api/: pyproject.toml
src/cloud_storage_client_api/src/cloud_storage_client_api/: __init__.py  client.py
src/http_chat_client_impl/: pyproject.toml
src/http_chat_client_impl/src/http_chat_client_impl/: __init__.py  _config.py  client.py
src/openai_ai_client_impl/: pyproject.toml
src/openai_ai_client_impl/src/openai_ai_client_impl/: __init__.py  client.py
src/s3_client_impl/: README.md  pyproject.toml
src/s3_client_impl/src/s3_client_impl/: __init__.py  _auth.py  client.py
src/s3_client_impl/tests/: _auth.py  test_client_smoke.py  test_client_unit.py
src/vertical_adapter/: README.md  pyproject.toml
src/vertical_adapter/src/vertical_adapter/: __init__.py  adapter.py
src/vertical_adapter/tests/: __init__.py  test_vertical_adapter.py
src/vertical_api/: README.md  pyproject.toml
src/vertical_api/tests/: test_interface.py
src/vertical_impl/: README.md  pyproject.toml
src/vertical_impl/tests/: test_aws_impl.py  test_oauth_http.py  test_token_store.py
src/vertical_service/: README.md  pyproject.toml
src/vertical_service/src/vertical_service/: __init__.py  __main__.py  agent.py  agent_api.py  agent_key_dep.py  app.py  config.py  deps.py  metrics.py  sessions.py
src/vertical_service/src/vertical_service/routes/: __init__.py  agent.py  auth.py  health.py  storage.py
src/vertical_service/tests/: __init__.py  conftest.py  test_agent.py  test_auth.py  test_config.py  test_deps.py  test_health.py  test_metrics.py  test_storage.py
src/vertical_service_api_client/: README.md  pyproject.toml
src/vertical_service_api_client/src/vertical_service_api_client/: __init__.py
src/vertical_service_api_client/src/vertical_service_api_client/api/auth/: auth_callback_auth_callback_get.py  auth_login_auth_login_get.py
src/vertical_service_api_client/src/vertical_service_api_client/api/health/: health_health_get.py
src/vertical_service_api_client/src/vertical_service_api_client/api/storage/: delete_file_storage_files_delete_delete.py  delete_object_storage_container_name_objects_object_key_delete.py  download_file_storage_files_download_get.py  download_object_storage_container_name_objects_object_key_get.py  get_file_info_storage_files_info_get.py  list_files_storage_files_list_get.py  upload_file_storage_files_upload_post.py  upload_object_storage_container_name_objects_object_key_post.py
src/vertical_service_api_client/src/vertical_service_api_client/models/: __init__.py  body_upload_file_storage_files_upload_post.py  delete_result.py  object_info.py  object_info_metadata_type_0.py
src/vertical_service_api_client/tests/: test_storage_client.py
tests/adapter/: test_cloud_storage_adapter.py
tests/e2e/: __init__.py  conftest.py  test_real_s3.py  test_service_blackbox.py  test_storage_chat_flow.py
tests/integration/: test_di.py  test_storage_integration.py
tests/unit/: __init__.py  test_aws_impl.py  test_interface.py
(+14 files in other folders)
