[project]
name = "cloud-storage-client"
version = "0.1.0"
description = "Component-based Cloud Storage client (AWS S3 implementation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    # Docs
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.16.1",

    # Quality / Type checking
    "mypy>=1.17.0",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",

    # Testing / Coverage
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "coverage>=7",

    # AWS typing stubs (for mypy)
    # Use one of these depending on your preference; boto3-stubs is the most complete.
    "boto3-stubs[s3]>=1.34.0",
    "types-aiobotocore[s3]>=2.13.0",
]

[tool.uv.workspace]
members = [
  "src/cloud_storage_client_api",
  "src/s3_client_impl",
]
[tool.uv.sources]
cloud-storage-client-api = { workspace = true }
s3-client-impl = { workspace = true }

[tool.ruff]
line-length = 130 # high for top level due to tests
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", # incompatible with D211
  "D213", # incompatible with D212
  "S101", # asserts are fine (especially in tests)
]

per-file-ignores = { 
  "**/test_*.py" = [
    # Tests are intentionally less strict:
    # - Docstrings are unnecessary for test functions
    # - Type annotations add noise to pytest tests
    # - Path and magic value rules reduce readability in tests
    # These exceptions are limited only to test files.
    "D100",
    "D101",
    "D102",
    "D103",
    "ANN001",
    "ANN201",
    "PLR2004",
    "PTH110",
    "PTH107",
    "SIM105",
    "S110"
  ]
}

[tool.mypy]
strict = true
explicit_package_bases = true # Required for src layout
mypy_path = ["src/cloud_storage_client_api/src", "src/s3_client_impl/src"]
ignore_missing_imports = false
warn_unused_ignores = false

# Allow untyped imports for specific modules (AWS SDKs can be noisy without stubs)
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "s3transfer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = ["tests", "src/*/tests"]
addopts = ["--cov", "--cov-report=term-missing", "--import-mode=importlib"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
    "e2e: marks tests as end-to-end tests (slow, full system)",
    "circleci: marks tests that can run in CI/CD environments without local credentials",
    "aws_credentials: marks tests that require AWS credentials / configured env vars",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 85 # Justification: A high threshold ensures most code is tested.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
