[project]
name = "ospsd-team-10"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloud-storage-api",
]

[tool.uv.workspace]
members = [
  "src/ai_client_api",
  "src/openai_ai_client_impl",
  "src/vertical_service_api_client",
  "src/vertical_adapter",
  "src/vertical_service",
  "src/vertical_impl",
]

[tool.uv.sources]
ai-client-api = { workspace = true }
openai-ai-client-impl = { workspace = true }
vertical-service-api-client = { workspace = true }
vertical-adapter = { workspace = true }
vertical-service = { workspace = true }
vertical-impl = { workspace = true }
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", rev = "v1.0.0" }

[tool.ruff]
line-length = 130
target-version = "py311"
exclude = [
  "src/vertical_service_api_client/src",
  "src/vertical_api",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "S101",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"src/vertical_service/src/vertical_service/agent.py" = ["TC001", "TC002", "TC003"]
"src/vertical_service/src/vertical_service/routes/agent.py" = ["TC002"]
"src/openai_ai_client_impl/src/openai_ai_client_impl/client.py" = ["TC003"]
"**/test_*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "ANN001",
  "ANN201",
  "PLR2004",
  "PTH110",
  "PTH107",
  "SIM105",
  "S110",
  "INP001",
]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = [
  "src/ai_client_api/src",
  "src/openai_ai_client_impl/src",
  "src/vertical_service_api_client/src",
  "src/vertical_adapter/src",
  "src/vertical_service/src",
  "src/vertical_impl/src",
]
ignore_missing_imports = false
warn_unused_ignores = false
exclude = [
  "src/vertical_api",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "src/vertical_adapter/tests",
  "src/vertical_impl/tests",
  "src/vertical_service/tests",
  "src/vertical_service_api_client/tests",
]
addopts = [
  "--cov=vertical_adapter",
  "--cov=vertical_service",
  "--cov=vertical_impl",
  "--cov-report=term-missing",
  "--import-mode=importlib",
]

markers = [
  "unit: marks tests as unit tests (fast, isolated)",
  "integration: marks tests as integration tests (medium speed, real dependencies)",
  "e2e: marks tests as end-to-end tests (slow, full system)",
  "circleci: marks tests that can run in CI/CD environments without local credentials",
  "aws_credentials: marks tests that require AWS credentials / configured env vars",
]

[tool.coverage.run]
source = [
  "vertical_adapter",
  "vertical_service",
  "vertical_impl",
]
omit = [
  "*/tests/*",
  "*/__main__.py",
  "src/vertical_service_api_client/src/*",
  "src/ai_client_api/src/*",
  "src/openai_ai_client_impl/src/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.1",
  "types-requests",
  "boto3-stubs",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "types-python-dateutil>=2.9.0.20260408",
]
