[project]
name = "cloud-storage-adapter"
version = "0.1.0"
description = "Adapter implementing cloud storage Client via service API client"
requires-python = ">=3.11"
dependencies = [
  "cloud-storage-client-api",
  "cloud-storage-service-api-client",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
