[project]
name = "cloud-storage-service"
version = "0.1.0"
description = "FastAPI deployment unit for the cloud storage client (OAuth + storage API)"
requires-python = ">=3.11"
dependencies = [
  "cloud-storage-client-api",
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "s3-client-impl",
  "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
