[project]
name = "cloud-storage-service-api-client"
version = "0.1.0"
description = "Typed client for the cloud storage FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
