[project]
name = "cloud-storage-client-api"
version = "0.1.0"
description = "Interface (ABC) for a Cloud Storage client"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
