[project]
name = "openai-ai-client-impl"
version = "0.1.0"
description = "OpenAI implementation of ai_client_api (HW3)"
requires-python = ">=3.11"
dependencies = [
  "ai-client-api",
  "openai>=1.59.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
