[project]
name = "s3-client-impl"
version = "0.1.0"
description = "AWS S3 implementation of the Cloud Storage client interface"
requires-python = ">=3.11"
dependencies = [
  "cloud-storage-client-api",
  "boto3>=1.34.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]