[project]
name = "vertical-service"
version = "0.1.0"
description = "FastAPI deployment unit for the cloud storage client (OAuth + storage API)"
requires-python = ">=3.11"
dependencies = [
  "vertical-adapter",
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "vertical-impl",
  "http-chat-client-impl",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.26",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
http-chat-client-impl = { workspace = true }
